--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@npmcli/move-file": "^3.0.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/react-html-parser": "^2.0.2",
-    "axios": "^1.3.4",
+    "ajv": "^8.12.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
-    "html-react-parser": "^3.0.12",
     "next": "13.2.3",
     "next-redux-wrapper": "^8.1.0",
     "node-sass": "^7.0.3",
@@ -25,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.58.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   }
 }
