--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@npmcli/move-file": "^3.0.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "ajv": "^8.12.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
@@ -24,7 +22,6 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.58.3",
-    "typescript": "4.9.5",
-    "uuid": "^9.0.0"
+    "typescript": "4.9.5"
   }
 }
